fix minor alignment issue with navbar buttons on screens with width less than 400px

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -6,14 +6,17 @@
 .link{
     text-decoration: none;
 }
+.navButton{
+    display: flex;
+    justify-content: center;
+}
 @media only screen and (max-width: 900px) {
     .navbar{
         flex-direction: row;
     }
 }
 @media only screen and (max-width: 400px) {
-    .link{
+    .navButton{
         max-width: 65px;
-        max-height: 65px;
     }
 }
